--- a/demo.ipynb
+++ b/demo.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a batch processor for our prediction function with max batch size of 16 and batch timeout of 1 second\n",
     "batch_processor = BatchProcessor(fake_predict, bs=16, timeout=1)"
    ]
   },
@@ -54,6 +55,7 @@
     }
    ],
    "source": [
+    "# batch_processor.process is non-blocking\n",
     "input = 1\n",
     "future = batch_processor.process(input)\n",
     "print(future)"
